--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <h3>СР</h3>
                 <ol>
                     <li><span class="compact-subject-abbr">ДМиМЛ</span><span class="compact-location-abbr">521</span></li>
-                    <li><span class="compact-subject-abbr">Англ. яз.</span><span class="compact-location-abbr">ФМО</span></li>
+                    <li><span class="compact-subject-abbr">Англ. яз.</span><span class="compact-location-abbr">ФМО 1013/1206</span></li>
                     <li><span class="compact-subject-abbr">-</span><span class="compact-location-abbr">-</span></li>
                     <li><span class="compact-subject-abbr">Бел. яз. (проф)</span><span class="compact-location-abbr">1008 ФМО</span></li>
                 </ol>
