--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
                 day: "Вторник",
                 classes: [
                     { time: "1", name: "Математический анализ", room: "437" },
-                    { time: "2", name: "Аналитическая геометрия", room: "521" },
-                    { time: "3", name: "Аналитическая геометрия", room: "437" },
+                    { time: "2", name: "Основы высшей алгебры", room: "521" },
+                    { time: "3", name: "Основы высшей алгебры", room: "437" },
                 ]
             },
             3: {
