Extendtd with mathan and laplas partitions

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
     <div class="controls">
         <button id="toggle-view-btn" class="btn">Переключить вид</button>
         <button id="toggle-theme-btn" class="btn">Ночная тема</button>
+        <button id="routing-btn" class="btn" onclick="window.location.href='routing.html'">Маршрутизация</button>
     </div>
     <div id="schedule-container" class="schedule"></div>
 </div>
@@ -360,8 +361,8 @@
                 day: "Вторник",
                 classes: [
                     { time: "1", name: "Математический анализ", room: "437" },
-                    { time: "2", name: "Основы высшей алгебры", room: "521" },
-                    { time: "3", name: "Основы высшей алгебры", room: "437" },
+                    { time: "2", name: "Аналитическая геометрия", room: "521" },
+                    { time: "3", name: "Аналитическая геометрия", room: "437" },
                 ]
             },
             3: {
