--- a/routing.html
+++ b/routing.html
@@ -57,6 +57,7 @@
             font-size: 1.1em;
             font-weight: 500;
             transition: background-color 0.3s ease, transform 0.2s ease; /* Плавные переходы */
+            margin: 5px;
         }
 
         /* Эффект при наведении курсора на кнопку */
@@ -85,7 +86,12 @@
 
     <div class="card">
         <h1 id="greeting-text" class="greeting">Здравствуйте, что вас интересует?</h1>
-        <a href="timetable.html" class="nav-button">Расписание</a>
+        <a href="index.html" class="nav-button">Расписание</a>
+        <br>
+        <a href="mathan.html" class="nav-button"> Прогон базы - матан [Beta]</a>
+        <br>
+        <a href="laplas.html" class="nav-button">Демо Лапласа</a>
+
     </div>
 
     <script>
