--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         h1 { font-size: 1.6em; text-align: center; color: var(--accent-color); margin: 0 0 5px; cursor: pointer; }
         h2 { font-size: 1.1em; font-weight: 500; text-align: center; color: var(--accent-color); margin-bottom: 20px; }
-        .controls { text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 10px; }
+        .controls { text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 10px; flex-direction: column;}
         .btn {
             background-color: var(--accent-color-light); color: var(--accent-color); border: 1px solid var(--accent-color-medium); padding: 8px 16px; border-radius: 6px; font-size: 14px; font-weight: 500; cursor: pointer; transition: background-color 0.3s, box-shadow 0.3s, border-color 0.3s;
         }
