--- a/index.html
+++ b/index.html
@@ -353,8 +353,7 @@
                 classes: [
                     { time: "1", name: "Математический анализ", room: "521" },
                     { time: "2", name: "Основы и методологии программирования", room: "521" },
-                    { time: "3", name: "Английский язык", room: "437 или 438" },
-                    { time: "4", name: "История белорусской государственности", room: "542" }
+                    { time: "3", name: "Английский язык", room: "437 или 438" }
                 ]
             },
             2: {
@@ -369,7 +368,8 @@
                 day: "Среда",
                 classes: [
                     { time: "1", name: "Дискретная математика и мат. логика", room: "521" },
-                    { time: "2", name: "Английский язык", room: "ФМО, 1206 или 1013" },
+                    { time: "2", name: "Английский язык", room: "ФМО, 1206 или 1013" },,
+                    { time: "4", name: "История белорусской государственности", room: "1008" }
                 ]
             },
             4: {
