Update class schedule and titles in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Расписание - Группа 22 (П.Б)</title>
+    <title>Y-group</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <style>
         /* ... все ваши предыдущие стили остаются здесь без изменений ... */
@@ -183,7 +183,6 @@
         body.dark-theme .modal-actions .btn.danger { background-color: #4e1a1a; color: #ff8a80; border-color: #803434;}
         body.dark-theme .modal-actions .btn.danger:hover { background-color: #803434;}
 
-        /* НОВОЕ: Стили для офлайн-баннера */
         .offline-banner {
             display: none; /* Скрыт по умолчанию */
             position: fixed;
@@ -335,15 +334,16 @@
      const bellSchedules = { default: { 1: "8:15-9:35", 2: "9:45-11:05", 3: "11:15-12:35", 4: "13:00-14:20" } };
         const abbreviations = {
             "Математический анализ": "Мат. ан.",
-            "Основы и методологии программирования": "ОиМП",
+            "Программирование и разработка приложений": "МОП/РКпП",
             "Английский язык": "Англ. яз.",
-            "История белорусской государственности": "ИБГ",
+            "Линейная алгебра": "Лин. Ал.",
             "Аналитическая геометрия": "Анал. геом.",
             "Белорусский язык": "Бел. яз.",
             "Дискретная математика и мат. логика": "ДМиМЛ",
             "Белорусский язык (проф. лексика)": "Бел. яз.",
             "Физическая культура": "Физ-ра",
             "Основы высшей алгебры": "ОВА",
+            "Кураторский час": "Кур. час"
 
         };
 
@@ -352,49 +352,49 @@
                 day: "Понедельник",
                 classes: [
                     { time: "1", name: "Математический анализ", room: "521" },
-                    { time: "2", name: "Основы и методологии программирования", room: "521" },
-                    { time: "3", name: "Английский язык", room: "437 или 438" }
+                    { time: "2", name: "Программирование и разработка приложений", room: "521" },
+                    { time: "3", name: "Математический анализ", room: "437" },
+                    { time: "4", name: "Английский язык", room: "542 или 544" }
                 ]
             },
             2: {
                 day: "Вторник",
                 classes: [
-                    { time: "1", name: "Математический анализ", room: "437" },
-                    { time: "2", name: "Аналитическая геометрия", room: "521" },
-                    { time: "3", name: "Аналитическая геометрия", room: "437" },
+                    { time: "1", name: "Линейная алгебра", room: "521" },
+                    { time: "2", name: "Линейная алгебра", room: "437" },
                 ]
             },
             3: {
                 day: "Среда",
                 classes: [
                     { time: "1", name: "Дискретная математика и мат. логика", room: "521" },
-                    { time: "2", name: "Английский язык", room: "ФМО, 1206 или 1013" },,
-                    { time: "4", name: "История белорусской государственности", room: "1008" }
+                    { time: "2", name: "Программирование и разработка приложений", room: "521" },
+                    { time: "3", name: "Кураторский час", room: "541" },
+                    { time: "4", name: "Английский язык", room: "ФМО, 1206 или 1013" },
                 ]
             },
             4: {
                 day: "Четверг",
                 classes: [
-                    { time: "1", name: "Основы высшей алгебры", room: "521" },
-                    { time: "2", name: "Дискретная математика и мат. логика", room: "442" },
-                    { time: "3", name: "Основы высшей алгебры", room: "442" },
-                    { time: "4", name: "Физическая культура", room: "" }
+                    { time: "1", name: "Математический анализ", room: "521" },
+                    { time: "2", name: "Математический анализ", room: "437" },
+                    { time: "3", name: "Дискретная математика и мат. логика", room: "438" },
+                    { time: "4", name: "Физическая культура", room: "Спорткомплекс" }
                 ]
             },
             5: {
                 day: "Пятница",
                 classes: [
-                    { time: "1", name: "Математический анализ", room: "437" },
-                    { time: "2", name: "Математический анализ", room: "521" },
-                    { time: "3", name: "Основы и методологии программирования", room: "521" }
+                    { time: "2", name: "Линейная алгебра", room: "521" },
+                    { time: "3", name: "Линейная алгебра", room: "437" },
                 ]
             },
             6: {
                 day: "Суббота",
                 classes: [
-                    { time: "1", name: "Основы и методологии программирования", room: "Дзержинского 5, 1/4 эт." },
-                    { time: "2", name: "Основы и методологии программирования", room: "Дзержинского 5, 1/4 эт." },
-                    { time: "3", name: "История белорусской государственности", room: "521" },
+                    { time: "1", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
+                    { time: "2", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
+                    { time: "2", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
                     { time: "4", name: "Физическая культура", room: "Спорткомплекс" }
                 ]
             }
