Rename 'Математический анализ' to 'Мат анализ'

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     let testDate = null; let testTime = null;
      const bellSchedules = { default: { 1: "8:15-9:35", 2: "9:45-11:05", 3: "11:15-12:35", 4: "13:00-14:20" } };
         const abbreviations = {
-            "Математический анализ": "Мат. ан.",
+            "Мат анализ": "Мат. ан.",
             "Программирование и разработка приложений": "МОП/РКпП",
             "Английский язык": "Англ. яз.",
             "Линейная алгебра": "Лин. Ал.",
@@ -351,9 +351,9 @@
             1: {
                 day: "Понедельник",
                 classes: [
-                    { time: "1", name: "Математический анализ", room: "521" },
+                    { time: "1", name: "Мат анализ", room: "521" },
                     { time: "2", name: "Программирование и разработка приложений", room: "521" },
-                    { time: "3", name: "Математический анализ", room: "437" },
+                    { time: "3", name: "Мат анализ", room: "437" },
                     { time: "4", name: "Английский язык", room: "542 или 544" }
                 ]
             },
@@ -376,10 +376,10 @@
             4: {
                 day: "Четверг",
                 classes: [
-                    { time: "1", name: "Математический анализ", room: "521" },
-                    { time: "2", name: "Математический анализ", room: "437" },
+                    { time: "1", name: "Мат анализ", room: "521" },
+                    { time: "2", name: "Мат анализ", room: "437" },
                     { time: "3", name: "Дискретная математика и мат. логика", room: "438" },
-                    { time: "4", name: "Физическая культура", room: "Спорткомплекс" }
+                    { time: "4", name: "Физическая культура", room: "" }
                 ]
             },
             5: {
@@ -395,7 +395,7 @@
                     { time: "1", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
                     { time: "2", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
                     { time: "2", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
-                    { time: "4", name: "Физическая культура", room: "Спорткомплекс" }
+                    { time: "4", name: "Физическая культура", room: "" }
                 ]
             }
         };function getShortName(fullName) { return fullName.split(' / ').map(p => abbreviations[p.trim()] || p.trim()).join(' / '); }
