Update class names and room details in schedule

--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
             "Белорусский язык (проф. лексика)": "Бел. яз.",
             "Физическая культура": "Физ-ра",
             "Основы высшей алгебры": "ОВА",
-            "Кураторский час": "Кур. час"
+            "Кураторский час": "Кур. час",
+            "Яндекс": "МОП/РКпП",
 
         };
 
@@ -392,9 +393,9 @@
             6: {
                 day: "Суббота",
                 classes: [
-                    { time: "1", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
-                    { time: "2", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
-                    { time: "2", name: "Программирование и разработка приложений", room: "Дзержинского 5, 1/4 эт." },
+                    { time: "1", name: "Яндекс", room: "проспект Дзержинского 5, 1/4 эт." },
+                    { time: "2", name: "Яндекс", room: "проспект Дзержинского 5, 1/4 эт." },
+                    { time: "2", name: "Яндекс", room: "проспект Дзержинского 5, 1/4 эт." },
                     { time: "4", name: "Физическая культура", room: "" }
                 ]
             }
